modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -90,7 +90,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class. Implements the `IComparable` interface in order to support comparisons between node values and can uphold the rules for a BST."
+    "For this **custom implementation of the Binary Search Tree**, we will need to define a **nested class** following the pattern below:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. `BinarySearchTree<T>` - The primary superclass which contains a collection of nodes and provides a reference to the root of the tree."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.  `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class. Implements the `IComparable` interface in order to support comparisons between node values and can uphold the rules for a BST."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. `TreePrinter` - An internal class providing several methods, along with an additional nested internal `NodeConnector` class, which facilitates displaying a printed representaion of the full BST. "
    ]
   },
   {
