modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.  `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class. Implements the `IComparable` interface in order to support comparisons between node values and can uphold the rules for a BST."
+    "2.  `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class which implements the `IComparable` interface in order to support comparisons between node values and can uphold the rules for a BST."
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. `TreePrinter` - An internal class providing several methods, along with an additional nested internal `NodeConnector` class, which facilitates displaying a printed representaion of the full BST. "
+    "3. `TreePrinter` - An internal class providing several methods, along with an additional nested internal `NodeConnector` class, which facilitates displaying a printed representaion of the full BST and is visible only within the primary **Binary Search Tree** class  "
    ]
   },
   {
