--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.  `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class which implements the `IComparable` interface in order to support comparisons between node values and can uphold the rules for a BST."
+    "2.  `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class which implements the `IComparable` interface in order to support comparisons between node values and uphold the rules for a BST."
    ]
   },
   {
@@ -142,7 +142,7 @@
     "    // An internal class that describes a node’s structure \n",
     "    // and is visible only within the primary Binary Search Tree class. \n",
     "    // Implements the IComparable interface in order to support comparisons \n",
-    "    // between node values and can uphold the rules for a BST.\n",
+    "    // between node values and uphold the rules for a BST.\n",
     "    //|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
     "    {\n",
     "        \n",
