modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. `BinarySearchTree<T>` - The primary superclass which contains a collection of nodes and provides a reference to the root of the tree."
+    "1. `BinarySearchTree<T>` - The primary superclass which contains a collection of nodes, provides a reference to the root of the **Binary Search Tree**, and implements the BST operational methods."
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.  `BinaryTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class which implements the `IComparable` interface in order to support comparisons between node values and uphold the rules for a BST."
+    "2.  `BinarySearchTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class which implements the `IComparable` interface in order to support comparisons between node values and uphold the rules for a BST."
    ]
   },
   {
@@ -134,6 +134,11 @@
    "outputs": [],
    "source": [
     "public class BinarySearchTree<T> where T : IComparable<T>\n",
+    "//|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
+    "// The primary superclass which contains a collection of nodes, \n",
+    "// provides a reference to the root of the Binary Search Tree, \n",
+    "// and implements the BST operational methods\n",
+    "//|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
     "{\n",
     "\n",
     "    internal class BinarySearchTreeNode<T> : \n",
