--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.  `BinarySearchTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class which implements the `IComparable` interface in order to support comparisons between node values and uphold the rules for a BST."
+    "2.  `BinarySearchTreeNode<T>` - An internal class that describes a node’s structure and is visible only within the primary **Binary Search Tree** class, which implements the `IComparable` interface in order to support comparisons between node values and uphold the rules for a BST."
    ]
   },
   {
