modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -718,6 +718,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../../_img/BSTExample.jpg\" style=\"display: block; margin: auto; width: 700px;\"></img>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -733,7 +749,7 @@
    },
    "outputs": [],
    "source": [
-    "BinarySearchTree<int> randomNumberBST = new BinarySearchTree<int>();"
+    "BinarySearchTree<int> exampleBST = new BinarySearchTree<int>();"
    ]
   },
   {
@@ -752,9 +768,9 @@
    },
    "outputs": [],
    "source": [
-    "for( int i = 0; i < 15; i++)\n",
+    "foreach( int nodeValue in new int[] {19 , 11, 35, 7 ,16, 23, 13, 17} )\n",
     "{\n",
-    "    randomNumberBST.Insert( new Random().Next(1, 100) );\n",
+    "    exampleBST.Insert( nodeValue );\n",
     "}"
    ]
   },
@@ -777,13 +793,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inorder traversal:\n",
-      "1 11 12 35 49 50 58 79 81 90 95 98 "
+      "    .——— 35\n",
+      "   |    `——— 23\n",
+      "——— 19\n",
+      "   |        .——— 17\n",
+      "   |    .——— 16\n",
+      "   |   |    `——— 13\n",
+      "    `——— 11\n",
+      "        `——— 7\n"
      ]
     }
    ],
    "source": [
-    "randomNumberBST.TraverseBST()"
+    "exampleBST.printBST()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -805,23 +835,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    .——— 98\n",
-      "——— 95\n",
-      "   |    .——— 90\n",
-      "    `——— 81\n",
-      "       |            .——— 79\n",
-      "       |        .——— 58\n",
-      "       |       |    `——— 50\n",
-      "       |    .——— 49\n",
-      "       |   |   |    .——— 35\n",
-      "       |   |    `——— 12\n",
-      "       |   |        `——— 11\n",
-      "        `——— 1\n"
+      "inorder traversal:\n",
+      "7 11 13 16 17 19 23 35 "
      ]
     }
    ],
    "source": [
-    "randomNumberBST.printBST()"
+    "exampleBST.TraverseBST()"
    ]
   }
  ],
