modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -254,7 +254,7 @@
     "    //--------------------------------- S E A R C H -------------------------------------\n",
     "    // Returns a reference to the node containing the specified value, \n",
     "    // or else a null if no such node can be found in the BST\n",
-    "    public BinarySearchTreeNode<T> Find( T valueToFind )\n",
+    "    private BinarySearchTreeNode<T> Find( T valueToFind )\n",
     "    {\n",
     "\n",
     "        // First, we designate a pointer to the current node \n",
@@ -320,22 +320,17 @@
     "\n",
     "    } \n",
     "    /////////////////////////////////////////////////////////////////////////////////////\n",
-    "    // Returns a boolean indicating if the specified value can be found in the BST\n",
-    "    public bool Contains( T value )\n",
-    "    {\n",
-    "        return ( Find( value ) != null ) ? true : false;\n",
-    "    }\n",
-    "    /////////////////////////////////////////////////////////////////////////////////////\n",
-    "    // Returns the node with the closest value to the specified value, \n",
-    "    // or simply returns the node having the same value if it is determined to be a leaf\n",
-    "    public BinarySearchTreeNode<T> GetSuccessor( T valueToSucceed )\n",
+    "    // Returns the node with the next highest value to the specified value, \n",
+    "    // or simply returns the node having the same value\n",
+    "    // if it is determined that no node has a higher value\n",
+    "    private BinarySearchTreeNode<T> GetSuccessor( T valueToSucceed )\n",
     "    {\n",
     "\n",
     "        // First, we find the ancestor node containing the specified value to succeed\n",
     "        BinarySearchTreeNode<T> ancestor  = Find( valueToSucceed );\n",
     "\n",
     "\n",
-    "        // Tf the value to succeed was not found in the BST:\n",
+    "        // If the value to succeed was not found in the BST:\n",
     "        if( ancestor == null )\n",
     "        {\n",
     "\n",
@@ -375,29 +370,6 @@
     "        }\n",
     "\n",
     "\n",
-    "        // Conversely,\n",
-    "        // If the ancestor is determined to only have a left child:\n",
-    "        else if ( ancestor.leftChild != null )\n",
-    "        {\n",
-    "\n",
-    "            // Clobber the reference to the successor node \n",
-    "            // with a reference to the ancestor's left child \n",
-    "            successor = ancestor.leftChild;\n",
-    "\n",
-    "\n",
-    "            // Iterating while the successor node still has a left child to visit: \n",
-    "            while( successor.rightChild != null )\n",
-    "            {\n",
-    "\n",
-    "                // Clobber the reference to the successor node\n",
-    "                // with a reference to the successor node's right child\n",
-    "                successor = successor.rightChild;\n",
-    "\n",
-    "            }\n",
-    "\n",
-    "        }\n",
-    "\n",
-    "\n",
     "        // After all that,\n",
     "        // the successor node contains either \n",
     "        // the value nearest to the one specified,\n",
@@ -406,6 +378,231 @@
     "        return successor;\n",
     "\n",
     "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Returns the node with the next lowest value to the specified value, \n",
+    "    // or simply returns the node having the same value \n",
+    "    // if it is determined that no node has no a lower value\n",
+    "    private BinarySearchTreeNode<T> GetPredecessor( T valueToPreceed )\n",
+    "    {\n",
+    "\n",
+    "        // First, we find the ancestor node containing the specified value to succeed\n",
+    "        BinarySearchTreeNode<T> ancestor  = Find( valueToPreceed );\n",
+    "\n",
+    "\n",
+    "        // If the value to succeed was not found in the BST:\n",
+    "        if( ancestor == null )\n",
+    "        {\n",
+    "\n",
+    "            // Throw an exception providing guidance implicating an invalid argument  \n",
+    "            throw new ArgumentException(\n",
+    "                \"\\nThe value provided does not exist in the BST,\"\n",
+    "                + \n",
+    "                \" and therefore has no valid predecessor\\n\"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // We then instantiate a successor node initially pointed at the ancestor \n",
+    "        BinarySearchTreeNode<T> predecessor = ancestor;\n",
+    "\n",
+    "\n",
+    "        // If the ancestor is determined have a left child:\n",
+    "        if ( ancestor.leftChild != null )\n",
+    "        {\n",
+    "\n",
+    "            // Clobber the reference to the predecessor node \n",
+    "            // with a reference to the ancestor's left child \n",
+    "            predecessor = ancestor.leftChild;\n",
+    "\n",
+    "\n",
+    "            // Iterating while the predecessor node still has a left child to visit: \n",
+    "            while( predecessor.rightChild != null )\n",
+    "            {\n",
+    "\n",
+    "                // Clobber the reference to the predecessor node\n",
+    "                // with a reference to the predecessor node's right child\n",
+    "                predecessor = predecessor.rightChild;\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // After all that,\n",
+    "        // the predecessor node contains either \n",
+    "        // the value nearest to the one specified,\n",
+    "        // or the value itself, were it the case that the node had no left child,\n",
+    "        // as required \n",
+    "        return predecessor;\n",
+    "\n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Returns a boolean indicating if the specified value can be found in the BST\n",
+    "    public bool Contains( T value )\n",
+    "    {\n",
+    "        return ( Find( value ) != null ) ? true : false;\n",
+    "    }\n",
+    "    //-----------------------------------------------------------------------------------\n",
+    "    //------------------------------- D E L E T I O N ----------------------------------- \n",
+    "    // Removes the specified node from the BST.\n",
+    "    private void RemoveNode( BinarySearchTreeNode<T> nodeToRemove )\n",
+    "    {\n",
+    "        \n",
+    "        // If the node to remove has 2 children:\n",
+    "        if( nodeToRemove.leftChild != null && nodeToRemove.rightChild != null )\n",
+    "        {\n",
+    "\n",
+    "            // Get the successor of the node to remove\n",
+    "            BinarySearchTreeNode<T> successor =  GetSuccessor( nodeToRemove.value );\n",
+    "\n",
+    "\n",
+    "            // Clobber the value of the node to remove with that of the successor's\n",
+    "            nodeToRemove.value = successor.value;\n",
+    "\n",
+    "\n",
+    "            // Clobber the refereence to the node to remove with that of the successor's\n",
+    "            nodeToRemove = successor;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Since the node to remove possibly has only one child,\n",
+    "        // check first to see if it has a left child,\n",
+    "        // if it does, then intantiate a new node that initially points to it.\n",
+    "        // Otherwise, initialize the new node to point at the right child instead,\n",
+    "        // whether the right child exists or not.\n",
+    "        BinarySearchTreeNode<T> onlyChild = ( nodeToRemove.leftChild != null ) ?\n",
+    "            nodeToRemove.leftChild\n",
+    "            :\n",
+    "            nodeToRemove.rightChild;\n",
+    "\n",
+    "        \n",
+    "        // If it turns out that we actually do have a valid only child:\n",
+    "        if( onlyChild != null )\n",
+    "        {\n",
+    "\n",
+    "            // Clobber the referece to the only child's parent\n",
+    "            // with that of the node to remove's\n",
+    "            onlyChild.parent = nodeToRemove.parent;\n",
+    "\n",
+    "\n",
+    "            // If the node to remove's parent is the root of the BST:\n",
+    "            if( nodeToRemove.parent == null )\n",
+    "            {\n",
+    "\n",
+    "                // Clobber the referece to the root with that of the only child's\n",
+    "                root = onlyChild;\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "            // Otherwise,\n",
+    "            // in the case that the node to remove \n",
+    "            // is any other node than the root:\n",
+    "            else\n",
+    "            {\n",
+    "\n",
+    "                // If the node to remove is the left child of it's parent\n",
+    "                if( nodeToRemove.parent.leftChild == nodeToRemove )\n",
+    "                {\n",
+    "\n",
+    "                    // Clobber the left child reference\n",
+    "                    // to the node to remove's parent\n",
+    "                    // with that of the only child's\n",
+    "                    nodeToRemove.parent.leftChild = onlyChild;\n",
+    "\n",
+    "                }\n",
+    "\n",
+    "\n",
+    "                // Otherwise,\n",
+    "                // the node to remove is the right child of it's parent \n",
+    "                else\n",
+    "                {\n",
+    "\n",
+    "                    // Clobber the right child reference\n",
+    "                    // to the node to remove's parent\n",
+    "                    // with that of the only child's\n",
+    "                    nodeToRemove.parent.rightChild = onlyChild;\n",
+    "\n",
+    "                } \n",
+    "\n",
+    "            } \n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Otherwise,\n",
+    "        // the node to remove has no children\n",
+    "        else\n",
+    "        {\n",
+    "            \n",
+    "            // If the childless node to remove is the root of the BST\n",
+    "            if( nodeToRemove.parent == null )\n",
+    "            {\n",
+    "\n",
+    "                // Clobber the reference to the root with a null value\n",
+    "                root = null;\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "            // Otherwise,\n",
+    "            // the node to remove is a leaf\n",
+    "            else\n",
+    "            {\n",
+    "\n",
+    "                // If the node to remove is the left child of it's parent\n",
+    "                if( nodeToRemove.parent.leftChild == nodeToRemove )\n",
+    "                {\n",
+    "\n",
+    "                    // Clobber the left child reference\n",
+    "                    // to the node to remove's parent with a null value\n",
+    "                    nodeToRemove.parent.leftChild = null;\n",
+    "\n",
+    "                }\n",
+    "\n",
+    "\n",
+    "                // Otherwise,\n",
+    "                // the node to remove is the right child of it's parent \n",
+    "                else\n",
+    "                {\n",
+    "\n",
+    "                    // Clobber the right child reference\n",
+    "                    // to the node to remove's parent with a null value\n",
+    "                    nodeToRemove.parent.rightChild = null;\n",
+    "\n",
+    "                } \n",
+    "\n",
+    "            }\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Removes the node containing the specified value from the BST, \n",
+    "    // given that the node actually exists\n",
+    "    public void Remove( T valueToRemove )\n",
+    "    {\n",
+    "\n",
+    "        // If the BST does not contain the specified value: \n",
+    "        if( ! this.Contains( valueToRemove ) )\n",
+    "        {\n",
+    "\n",
+    "            // Throw an exception providing guidance implicating an invalid argument  \n",
+    "            throw new ArgumentException(\n",
+    "                \"\\nThe value provided does not exist in the BST,\"\n",
+    "                + \n",
+    "                \" and therefore cannot be removed\\n\"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "        \n",
+    "\n",
+    "        // Find and remove the node containing the specified value from the BST\n",
+    "        RemoveNode( Find( valueToRemove ) );\n",
+    "\n",
+    "    } \n",
     "    //-----------------------------------------------------------------------------------\n",
     "    //-------------------------------- U T I L I T Y ------------------------------------ \n",
     "    // Traverses the BST, beginning at a specified node, recursively printing each value\n",
@@ -890,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -909,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -931,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -949,6 +1146,8 @@
      "output_type": "stream",
      "text": [
       "    .——— 35\n",
+      "   |   |        .——— 26\n",
+      "   |   |    .——— 25\n",
       "   |    `——— 23\n",
       "——— 19\n",
       "   |        .——— 17\n",
@@ -973,7 +1172,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "exampleBST.Remove(16);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    .——— 35\n",
+      "   |   |        .——— 26\n",
+      "   |   |    .——— 25\n",
+      "   |    `——— 23\n",
+      "——— 19\n",
+      "   |    .——— 17\n",
+      "   |   |    `——— 13\n",
+      "    `——— 11\n",
+      "        `——— 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "exampleBST.printBST();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -991,7 +1244,7 @@
      "output_type": "stream",
      "text": [
       "inorder traversal:\n",
-      "7 11 13 16 17 19 23 35 "
+      "7 11 13 17 19 23 25 26 35 "
      ]
     }
    ],
@@ -1009,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1069,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
