modified:   17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb

--- a/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
+++ b/17. Trees and Graphs/Custom Implementations/Trees/Binary Search Trees.ipynb
@@ -149,7 +149,7 @@
     "    // CONSTRUCTOR ----------------------------------------------------------------------\n",
     "    public BinarySearchTree()\n",
     "    {\n",
-    "        this.root = null;\n",
+    "        root = null;\n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
     "\n",
@@ -247,7 +247,7 @@
     "        // Clobber the reference to the root with the result of  a call to InsertNode\n",
     "        // which specifies the given value as the value to insert, a root which is null,\n",
     "        // and the curernt root as the current node at which to initiate the recursion \n",
-    "        this.root = InsertNode( valueToInsert, null, root );\n",
+    "        root = InsertNode( valueToInsert, null, root );\n",
     "        \n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
@@ -259,7 +259,7 @@
     "\n",
     "        // First, we designate a pointer to the current node \n",
     "        // and initialize it to start at the root of the BST\n",
-    "        BinarySearchTreeNode<T> currentNode = this.root;\n",
+    "        BinarySearchTreeNode<T> currentNode = root;\n",
     "\n",
     "\n",
     "        // Iterating while the current node is not null:\n",
@@ -443,6 +443,86 @@
     "    {\n",
     "        return ( Find( value ) != null ) ? true : false;\n",
     "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Returns the maximum node value in the BST\n",
+    "    public T Max()\n",
+    "    {\n",
+    "       \n",
+    "        // If the BST is empty or invallid: \n",
+    "        if( root == null )\n",
+    "        {\n",
+    "\n",
+    "            // Throw an exception prividing guidance implicating an empty BST\n",
+    "            throw new NullReferenceException(\n",
+    "                @\"\n",
+    "                The BST is empty, so it doesn't have a max value.\n",
+    "                \"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Instatiate a current node to initially point at the root of the BST  \n",
+    "        BinarySearchTreeNode<T> currentNode = root;\n",
+    "\n",
+    "\n",
+    "        // Iterating while the current node still has a left child to visit: \n",
+    "        while( currentNode.leftChild != null )\n",
+    "        {\n",
+    "\n",
+    "            // Clobber the referenceto the current node\n",
+    "            // with that of it's left child\n",
+    "            currentNode = currentNode.leftChild;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // After all that,\n",
+    "        // the current node contains the maximum node value in the BST,\n",
+    "        // as required\n",
+    "        return currentNode.value;\n",
+    "\n",
+    "    }\n",
+    "    /////////////////////////////////////////////////////////////////////////////////////\n",
+    "    // Returns the minumum node value in the BST\n",
+    "    public T Min()\n",
+    "    {\n",
+    "       \n",
+    "        // If the BST is empty or invallid: \n",
+    "        if( root == null )\n",
+    "        {\n",
+    "\n",
+    "            // Throw an exception prividing guidance implicating an empty BST\n",
+    "            throw new NullReferenceException(\n",
+    "                @\"\n",
+    "                The BST is empty, so it doesn't have a max value.\n",
+    "                \"\n",
+    "            );\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Instatiate a current node to initially point at the root of the BST  \n",
+    "        BinarySearchTreeNode<T> currentNode = root;\n",
+    "\n",
+    "\n",
+    "        // Iterating while the current node still has a left child to visit: \n",
+    "        while( currentNode.rightChild != null )\n",
+    "        {\n",
+    "\n",
+    "            // Clobber the referenceto the current node\n",
+    "            // with that of it's left child\n",
+    "            currentNode = currentNode.rightChild;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // After all that,\n",
+    "        // the current node contains the minimum node value in the BST,\n",
+    "        // as required\n",
+    "        return currentNode.value;\n",
+    "\n",
+    "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
     "    //------------------------------- D E L E T I O N ----------------------------------- \n",
     "    // Removes the specified node from the BST.\n",
@@ -586,7 +666,7 @@
     "    {\n",
     "\n",
     "        // If the BST does not contain the specified value: \n",
-    "        if( ! this.Contains( valueToRemove ) )\n",
+    "        if( ! Contains( valueToRemove ) )\n",
     "        {\n",
     "\n",
     "            // Throw an exception providing guidance implicating an invalid argument  \n",
@@ -742,7 +822,7 @@
     "                // Traverse the BST, beginning at the root, \n",
     "                // recursively printing each value\n",
     "                // using preorder traversal pattern \n",
-    "                TraversePreorder( this.root );\n",
+    "                TraversePreorder( root );\n",
     "\n",
     "                // stop evaluating for any further conditions\n",
     "                break;\n",
@@ -758,7 +838,7 @@
     "                // Traverse the BST, beginning at the root, \n",
     "                // recursively printing each value\n",
     "                // using preordinorderer traversal pattern \n",
-    "                TraverseInorder( this.root );\n",
+    "                TraverseInorder( root );\n",
     "\n",
     "                // stop evaluating for any further conditions\n",
     "                break;\n",
@@ -774,7 +854,7 @@
     "                // Traverse the BST, beginning at the root, \n",
     "                // recursively printing each value\n",
     "                // using preorder traversal pattern \n",
-    "                TraversePostorder( this.root );\n",
+    "                TraversePostorder( root );\n",
     "\n",
     "                // stop evaluating for any further conditions\n",
     "                break;\n",
@@ -786,7 +866,7 @@
     "    // Prints a string representation of the full BST \n",
     "    public void printBST()\n",
     "    {\n",
-    "        TreePrinter.printTree( this.root, null, false );    \n",
+    "        TreePrinter.printTree( root, null, false );    \n",
     "    }\n",
     "    //-----------------------------------------------------------------------------------\n",
     "\n",
@@ -1161,6 +1241,126 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>7</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "exampleBST.Max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>35</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "exampleBST.Min()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1170,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1189,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1222,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1258,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1318,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
